문서 개선: 교육 자료 품질 향상 및 오류 수정
Chapter 1 (Introduction):
- JavaFX 프로젝트 생성을 위한 상세한 단계별 가이드 추가
- IntelliJ IDEA와 VSCode 모두에 대한 설명 포함
- Maven 프로젝트 초기화 매개변수 문서화

Chapter 2 (Ball World):
- 사용하지 않는 BallRenderer 클래스 제거
- PaintableBall에 draw(GraphicsContext) 메서드 추가로 그리기 책임 이전
- Ball 클래스를 Point 객체 사용하도록 리팩토링
- getX/getY 제거하고 moveTo(Point) 메서드로 대체
- World 클래스에 누락된 메서드(remove, clear, getBallCount) 추가
- remove() 메서드가 존재하지 않는 ball에 대해 NoSuchElementException 발생하도록 수정

Chapter 3 (Movable World):
- 테스트 코드에 나타나지만 설명이 없던 MovableWorld 클래스 소개 추가
- GameLoop 클래스의 테스트 불가능성 문서화 (AnimationTimer UI 스레드 요구사항)
- GraphicsContext가 final 클래스임을 명시하고 mockito-inline 의존성 필요성 설명

Chapter 4 (Bounded World):
- Chapter 5에서 설명되는 Bounds 추상 클래스의 조기 테스트 코드 제거
- BoundedWorld가 MovableWorld를 상속하도록 수정
- getBounds() 메서드 테스트 제거

Chapter 5 (Abstract):
- 추상 Vector 클래스의 잘못된 인스턴스화를 수정
- 모든 Vector 인스턴스를 구체 클래스인 Vector2D로 변경

Chapter 6 (New Objects):
- Box 클래스의 좌표 시스템에 대한 명확한 설명 추가
- x, y가 왼쪽 상단 모서리임을 명시
- 경계 포함 여부 명확화 (x+width, y+height 포함)
- 시각적 다이어그램과 구체적인 예제 추가
- 경계 포함을 반영하도록 testContains 테스트 케이스 수정

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>